--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,11 @@
     href="//cloud.typography.com/6804272/781004/css/fonts.css"
   />
   <link rel="preconnect" href="https://fonts.gstatic.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Yellowtail&display=swap"
+    rel="stylesheet"
+  />
   <link
     href="https://fonts.googleapis.com/css2?family=Lobster&display=swap"
     rel="stylesheet"
@@ -39,7 +44,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Discord Clone</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
